force-app/main/default/objects/Survey_Resp_Related__mdt/Survey_Resp_Related__mdt.object-meta.xml
<CustomObject>
    <label>Survey_Resp_Related</label>
    <pluralLabel>Survey Response Related</pluralLabel>
</CustomObject>