force-app/main/default/objects/Survey_Resp_Related__mdt/fields/Case_Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Case_Fields_To_Display__c</fullName>
    <label>Case_Fields_To_Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>