force-app/main/default/objects/Survey_Resp_Related__mdt/fields/Field_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Display__c</fullName>
    <label>Response_Field_To_Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>