force-app/main/default/objects/Survey_Resp_Related__mdt/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <label>Journey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>